# ste6274gamedesign

./: CMakeLists.txt  ProjectHome.md
cmake/: Config.cmake
cmake/Modules/: FindAssImp.cmake  FindGLEW.cmake  FindGLM.cmake
depends/Server/: CMakeLists.txt
doc/: report.odt
resources/Mesh/Ferox/: lisence.txt
resources/Shaders/: minimal.fs  minimal.vs  particle.fs  skybox.fs
src/: CMakeLists.txt  main.cpp
src/Game/: Camera.h  EntityManager.cpp  EntityManager.h  GameOptions.cpp  GameOptions.h  game.cpp  game.h
src/Game/Components/: Aircraft.cpp  Attachments.cpp  Attachments.h  IdleSpin.cpp  IdleSpin.h  Material.cpp  MeshGeometry.h  MeshRenderer.cpp  MeshRenderer.h  ParticleEmitter.cpp  ParticleEmitter.h  Player.cpp  Player.h  Renderable.cpp  Renderable.h  SkyboxGeometry.cpp  SkyboxGeometry.h  TriangleGeometry.cpp  TriangleGeometry.h  TriangleRenderer.cpp  TriangleRenderer.h
src/Game/Graphics/: Particle.h  Shader.h  ShaderSystem.cpp  ShaderSystem.h  Uniform.h  Utils.h  VertexBufferObject.cpp  VertexBufferObject.h  qd.h
src/Game/ParsedNetData/: ParsedDsqData.h  ParsedJoinData.h
src/Game/Systems/: MaterialSystem.cpp  MaterialSystem.h  MeshSystem.cpp  ParticleSystem.h  RenderSystem.cpp  RenderSystem.h
src/GraphicsView/: OpenGL3GraphicsScene.cpp  OpenGL3GraphicsScene.h
src/Qt/Client/: Client.cpp  Client.h  ClientThread.h  ClientWorker.h  GameProtocol.h  Packet.cpp  Packet.h  SocketPackTask.cpp  SocketPackTask.h  SocketParseTask.cpp  SocketParseTask.h  TcpClient.cpp  TcpClient.h  TcpSocket.h
src/Qt/Client/PFW/: NegotiationPFW.cpp  NegotiationPFW.h  PacketFactoryWorker.cpp
src/Qt/Client/Tasks/: BuildConnectRequestPkgTask.cpp  BuildDsqPkgTask.cpp  BuildJoinRequestPkgTask.h  BuildPkgTask.cpp  BuildPkgTask.h  BuildServerErrorPkgTask.cpp  BuildServerErrorPkgTask.h  ParseAnswerTask.cpp  ParseConnectAnswerTask.h  ParseDsqAnswerTask.cpp  ParseDsqAnswerTask.h  ParseJoinAnswerTask.cpp  ParseJoinAnswerTask.h  SendPkgTask.cpp  SendPkgTask.h  TcpParseTask.cpp  TcpParseTask.h
src/Qt/GraphicsView/: OpenGL2GraphicsScene.cpp  OpenGL2GraphicsScene.h  OpenGL3GraphicsScene.cpp
src/Qt/UserInterface/: Connect.cpp  Connect.h  ConnectionFailed.cpp  ConnectionFailed.h  Exit.cpp  Exit.h  Join.cpp  Join.h  Lobby.cpp  Lobby.h  MainMenu.cpp  MainMenu.h  Options.cpp  Options.h  connect.ui  connectionFailed.ui  join.ui  lobby.ui  login.ui  mainMenu.ui  options.ui
trunk/: CMakeLists.txt
trunk/cmake/Modules/: FindAssImp.cmake  FindDevIL.cmake  FindGLEW.cmake  FindGLM.cmake  FindSPARK.cmake
trunk/depends/Server/: CMakeLists.txt
trunk/resources/Mesh/Station/: space_station_0.3DS
trunk/resources/Shaders/: minimal.fs  minimal.vs  particle.fs  particle.vs
trunk/src/: CMakeLists.txt  main.cpp  types.h
trunk/src/Game/: CMakeLists.txt  Camera.cpp  EntityManager.cpp  EntityManager.h  GameOptions.cpp  GameOptions.h  game.cpp  game.h
trunk/src/Game/Components/: Aircraft.h  IdleSpin.cpp  Material.h  MeshGeometry.cpp  MeshGeometry.h  MeshRenderer.cpp  MeshRenderer.h  ParticleEmitter.cpp  ParticleEmitter.h  Player.cpp  Player.h  Renderable.cpp  Renderable.h  SkyboxGeometry.cpp  TriangleGeometry.h  TriangleRenderer.cpp  TriangleRenderer.h
trunk/src/Game/Graphics/: Attribute.h  EngineFlameParticleEngine.cpp  EngineFlameParticleEngine.h  IBufferObject.cpp  IBufferObject.h  Particle.cpp  Shader.cpp  UniformBufferObject.cpp  UniformBufferObject.h  Utils.h
trunk/src/Game/ParsedNetData/: ParsedConnectData.h
trunk/src/Game/Systems/: MaterialSystem.cpp  MaterialSystem.h  MeshSystem.cpp  MeshSystem.h  ParticleSystem.cpp  ParticleSystem.h  RenderSystem.cpp  RenderSystem.h
trunk/src/GraphicsView/: CMakeLists.txt  OpenGL3GraphicsScene.cpp  OpenGL3GraphicsScene.h
trunk/src/Qt/Client/: Client.cpp  Client.h  ClientThread.cpp  ClientThread.h  ClientWorker.cpp  ClientWorker.h  DebugUtils.cpp  DebugUtils.h  NetworkSession.cpp  NetworkSession.h  Packet.cpp  Packet.h  ParsedData.h  RequestInfo.h  SocketPackTask.h  SocketParseTask.cpp  SocketParseTask.h  TcpClient.cpp  TcpClient.h  TcpSocket.cpp  TcpSocket.h
trunk/src/Qt/Client/PFW/: NegotiationPFW.cpp  NegotiationPFW.h  PacketFactoryWorker.h
trunk/src/Qt/Client/Tasks/: BuildConnectRequestPkgTask.cpp  BuildConnectRequestPkgTask.h  BuildDsqPkgTask.h  BuildJoinRequestPkgTask.cpp  BuildPkgTask.cpp  BuildPkgTask.h  ParseAnswerTask.cpp  ParseAnswerTask.h  ParseConnectAnswerTask.cpp  ParseDsqAnswerTask.h  ParseJoinAnswerTask.cpp  ServerParseTask.cpp  ServerParseTask.h  TcpParseTask.cpp  TcpParseTask.h
trunk/src/Qt/GraphicsView/: OpenGL2GraphicsScene.cpp  OpenGL2GraphicsScene.h  OpenGL3GraphicsScene.cpp
trunk/src/Qt/UserInterface/: Connect.cpp  Connect.h  ConnectionFailed.cpp  ConnectionFailed.h  Exit.cpp  Exit.h  Join.cpp  Join.h  Lobby.cpp  Login.cpp  Login.h  MainMenu.cpp  MainMenu.h  Options.cpp  Options.h  exit.ui  join.ui  mainMenu.ui  options.ui  ui_mainMenu.h
